<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ade.mylocalization.MainActivity"
    android:orientation="vertical"
    android:padding="20px">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/name"
        android:layout_marginTop="30dp"
        android:textColor="@color/merah"
        />
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20px"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="20px"
        />
    
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginBottom="20px"
        />
    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginBottom="20px"
        />
    
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/check"
        android:layout_marginBottom="20px"
        />
    
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bbtn_submit"
        android:textColor="@color/putih"
        android:background="@color/biru"
        android:layout_marginBottom="30px"
        />

    <Button
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_language"
        android:textColor="@color/putih"
        android:background="@color/hijau"
        />

</LinearLayout>
